Add new translation keys

--- a/AngularApp/projects/app-service-diagnostics/src/assets/i18n/de.json
+++ b/AngularApp/projects/app-service-diagnostics/src/assets/i18n/de.json
@@ -29,6 +29,7 @@
 	"Click here to go back to the old version.": "",
 	"Click here to view more details": "",
 	"Critical": "",
+	"Diagnostic Tools": "",
 	"Function App.homepage.description": "Untersuchen Sie die Leistung Ihrer App, diagnostizieren Sie Probleme und finden Sie heraus, wie Sie Ihre Anwendung verbessern können.",
 	"Function App.homepage.title": "Funktions-App-Diagnose (Vorschau)",
 	"Info": "",
@@ -40,12 +41,14 @@
 	"Overview": "Überblick",
 	"Popular troubleshooting tools": "Beliebte Tools zur Fehlerbehebung",
 	"Privacy": "Privatsphäre",
+	"Proactive Tools": "",
 	"Risk alerts": "",
 	"Service Fabric.homepage.description": "Verwenden Sie die App Service-Umgebungsdiagnose, um die Leistung Ihrer App Service-Umgebung zu untersuchen, Probleme zu diagnostizieren und herauszufinden, wie Sie die Verfügbarkeit Ihrer App Service-Umgebung verbessern können.",
 	"Service Fabric.homepage.title": "Verwenden Sie die App Service-Umgebungsdiagnose, um die Leistung Ihrer App Service-Umgebung zu untersuchen, Probleme zu diagnostizieren und herauszufinden, wie Sie die Verfügbarkeit Ihrer App Service-Umgebung verbessern können.",
 	"Static Azure Kubernetes Service.homepage.description": "Erforschen Sie Möglichkeiten zur Diagnose und Behebung der häufigsten Probleme Ihres Clusters, von CRUD-Vorgängen bis hin zu Verbindungsproblemen. Klicken Sie auf eines der folgenden Dokumente, um die Fehlerbehebung zu starten.",
 	"Static Azure Kubernetes Service.homepage.title": "Azure Kubernetes-Dienstdiagnose",
 	"Success": "",
+	"Support Tools": "",
 	"Troubleshoot": "Problembehandlung",
 	"Troubleshooting categories": "",
 	"UTC End Time (mm/dd/yy)": "UTC-Endzeit (MM / TT / JJ)",
