--- a/AngularApp/projects/app-service-diagnostics/src/assets/i18n/en.json
+++ b/AngularApp/projects/app-service-diagnostics/src/assets/i18n/en.json
@@ -29,6 +29,7 @@
 	"Click here to go back to the old version.": "Click here to go back to the old version",
 	"Click here to view more details": "Click here to view more details",
 	"Critical": "Critical",
+	"Diagnostic Tools": "Diagnostic Tools",
 	"Function App.homepage.description": "Investigate how your app is performing, diagnose issues and discover how to improve your application.",
 	"Function App.homepage.title": "Function App Diagnostics (Preview)",
 	"Info": "Info",
@@ -40,12 +41,14 @@
 	"Overview": "Overview",
 	"Popular troubleshooting tools": "Popular troubleshooting tools",
 	"Privacy": "Privacy",
+	"Proactive Tools": "Proactive Tools",
 	"Risk alerts": "",
 	"Service Fabric.homepage.description": "Use App Service Environment Diagnostics to investigate how your App Service Environment is performing, diagnose issues, and discover how to improve the availability of your App Service Environment.  Select the problem category that best matches the information or tool that you are  interested in.",
 	"Service Fabric.homepage.title": "Use App Service Environment Diagnostics to investigate how your App Service Environment is performing, diagnose issues, and discover how to improve the availability of your App Service Environment.  Select the problem category that best matches the information or tool that you are  interested in.",
 	"Static Azure Kubernetes Service.homepage.description": "Explore ways to diagnose and troubleshoot the common problems of your cluster from CRUD operations to connection problems. Click on any of the documents below to start troubleshooting.",
 	"Static Azure Kubernetes Service.homepage.title": "Azure Kubernetes Service Diagnostics",
 	"Success": "Success",
+	"Support Tools": "Support Tools",
 	"Troubleshoot": "Troubleshoot",
 	"Troubleshooting categories": "",
 	"UTC End Time (mm/dd/yy)": "UTC End Time (mm/dd/yy)",
