--- a/AngularApp/projects/app-service-diagnostics/src/assets/i18n/es.json
+++ b/AngularApp/projects/app-service-diagnostics/src/assets/i18n/es.json
@@ -29,6 +29,7 @@
 	"Click here to go back to the old version.": "",
 	"Click here to view more details": "",
 	"Critical": "",
+	"Diagnostic Tools": "",
 	"Function App.homepage.description": "Investigue el rendimiento de su aplicación, diagnostique problemas y descubra cómo mejorarla.",
 	"Function App.homepage.title": "Función de diagnóstico de la aplicación (versión preliminar)",
 	"Info": "",
@@ -40,12 +41,14 @@
 	"Overview": "Visión general",
 	"Popular troubleshooting tools": "Herramientas de resolución de problemas populares",
 	"Privacy": "intimidad",
+	"Proactive Tools": "",
 	"Risk alerts": "Espanish categories",
 	"Service Fabric.homepage.description": "Utilice App Service Environment Diagnostics para investigar el rendimiento de su App Service Environment, diagnosticar problemas y descubrir cómo mejorar la disponibilidad de su App Service Environment.",
 	"Service Fabric.homepage.title": "Utilice App Service Environment Diagnostics para investigar el rendimiento de su App Service Environment, diagnosticar problemas y descubrir cómo mejorar la disponibilidad de su App Service Environment.",
 	"Static Azure Kubernetes Service.homepage.description": "Explore formas de diagnosticar y solucionar los problemas comunes de su clúster, desde operaciones CRUD hasta problemas de conexión. Haga clic en cualquiera de los documentos a continuación para comenzar a solucionar problemas.",
 	"Static Azure Kubernetes Service.homepage.title": "Diagnóstico del servicio de Azure Kubernetes",
 	"Success": "",
+	"Support Tools": "",
 	"Troubleshoot": "Solucionar problemas",
 	"Troubleshooting categories": "Espanish",
 	"UTC End Time (mm/dd/yy)": "Hora de finalización UTC (mm / dd / aa)",
