--- a/AngularApp/projects/app-service-diagnostics/src/assets/i18n/zh.json
+++ b/AngularApp/projects/app-service-diagnostics/src/assets/i18n/zh.json
@@ -29,6 +29,7 @@
 	"Click here to go back to the old version.": "单击此处返回到旧版本",
 	"Click here to view more details": "点击此处查看更多详细信息",
 	"Critical": "关键",
+	"Diagnostic Tools": "诊断工具",
 	"Function App.homepage.description": "调查您的应用程序的性能如何，诊断问题并发现如何改进您的应用程序。",
 	"Function App.homepage.title": "功能应用程序诊断（预览）",
 	"Info": "通知",
@@ -40,12 +41,14 @@
 	"Overview": "概述",
 	"Popular troubleshooting tools": "常用的故障排除工具",
 	"Privacy": "隐私",
+	"Proactive Tools": "主动监测工具",
 	"Risk alerts": "Espanish categories",
 	"Service Fabric.homepage.description": "使用App Service环境诊断程序可以调查您的App Service环境如何执行，诊断问题以及发现如何提高App Service环境的可用性。选择以下您感兴趣的问题类别进行了解。",
 	"Service Fabric.homepage.title": "使用App Service环境诊断程序可以调查您的App Service环境如何执行，诊断问题以及发现如何提高App Service环境的可用性。选择以下您感兴趣的问题类别进行了解。",
 	"Static Azure Kubernetes Service.homepage.description": "探索诊断和排除群集的常见问题（从CRUD操作到连接问题）的方法。单击下面的任何文档以开始故障排除。",
 	"Static Azure Kubernetes Service.homepage.title": "Azure Kubernetes服务诊断",
 	"Success": "成功",
+	"Support Tools": "支持工具",
 	"Troubleshoot": "疑难解答",
 	"Troubleshooting categories": "Espanish categories",
 	"UTC End Time (mm/dd/yy)": "UTC结束时间（mm / dd / yy）",
