--- a/AngularApp/projects/app-service-diagnostics/src/assets/i18n/ja.json
+++ b/AngularApp/projects/app-service-diagnostics/src/assets/i18n/ja.json
@@ -29,6 +29,7 @@
 	"Click here to go back to the old version.": "",
 	"Click here to view more details": "",
 	"Critical": "",
+	"Diagnostic Tools": "",
 	"Function App.homepage.description": "アプリのパフォーマンスを調査し、問題を診断して、アプリケーションを改善する方法を見つけます。",
 	"Function App.homepage.title": "機能アプリの診断（プレビュー）",
 	"Info": "",
@@ -40,12 +41,14 @@
 	"Overview": "概要",
 	"Popular troubleshooting tools": "人気のトラブルシューティングツール",
 	"Privacy": "プライバシー",
+	"Proactive Tools": "",
 	"Risk alerts": "Espanish categories",
 	"Service Fabric.homepage.description": "App Service環境診断を使用して、App Service環境のパフォーマンスを調査し、問題を診断し、AppService環境の可用性を向上させる方法を見つけます。",
 	"Service Fabric.homepage.title": "App Service環境診断を使用して、App Service環境のパフォーマンスを調査し、問題を診断し、AppService環境の可用性を向上させる方法を見つけます。",
 	"Static Azure Kubernetes Service.homepage.description": "CRUD操作から接続の問題まで、クラスターの一般的な問題を診断およびトラブルシューティングする方法を探ります。以下のドキュメントのいずれかをクリックして、トラブルシューティングを開始してください。",
 	"Static Azure Kubernetes Service.homepage.title": "AzureKubernetesサービス診断",
 	"Success": "",
+	"Support Tools": "",
 	"Troubleshoot": "トラブルシューティング",
 	"Troubleshooting categories": "Espanish categories",
 	"UTC End Time (mm/dd/yy)": "UTC終了時間（mm / dd / yy）",
