--- a/AngularApp/projects/app-service-diagnostics/src/assets/i18n/pt.json
+++ b/AngularApp/projects/app-service-diagnostics/src/assets/i18n/pt.json
@@ -29,6 +29,7 @@
 	"Click here to go back to the old version.": "",
 	"Click here to view more details": "",
 	"Critical": "",
+	"Diagnostic Tools": "",
 	"Function App.homepage.description": "",
 	"Function App.homepage.title": "",
 	"Info": "",
@@ -40,12 +41,14 @@
 	"Overview": "",
 	"Popular troubleshooting tools": "",
 	"Privacy": "",
+	"Proactive Tools": "",
 	"Risk alerts": "",
 	"Service Fabric.homepage.description": "",
 	"Service Fabric.homepage.title": "",
 	"Static Azure Kubernetes Service.homepage.description": "",
 	"Static Azure Kubernetes Service.homepage.title": "",
 	"Success": "",
+	"Support Tools": "",
 	"Troubleshoot": "",
 	"Troubleshooting categories": "",
 	"UTC End Time (mm/dd/yy)": "",
