Add localization for analysis view

--- a/AngularApp/projects/app-service-diagnostics/src/assets/i18n/cs.json
+++ b/AngularApp/projects/app-service-diagnostics/src/assets/i18n/cs.json
@@ -2,8 +2,10 @@
 	"API Management.homepage.description": "",
 	"ASE.homepage.description": "",
 	"ASE.homepage.title": "",
+	"An interactive self-serve diagnostics tool": "",
 	"App Service Certificates.homepage.description": "",
 	"App Service Certificates.homepage.title": "",
+	"App Service Diagnostics: Genie": "",
 	"Apply": "",
 	"Ask Genie": "",
 	"Availability": "",
@@ -26,34 +28,59 @@
 	"Azure Spring Cloud.homepage.title": "",
 	"Cancel": "",
 	"Check your app’s health and discover app or platform issues.": "",
+	"Checks": "",
 	"Click here to go back to the old version.": "",
 	"Click here to view more details": "",
+	"Collapse Genie": "",
 	"Critical": "Kritický",
+	"Description": "",
 	"Diagnostic Tools": "",
+	"Documents to aid in troubleshooting": "",
+	"Enable Application Insights": "",
+	"Events observed during this time period": "",
 	"Function App.homepage.description": "",
 	"Function App.homepage.title": "",
+	"Go to Detector": "",
+	"Hello, Welcome to App Service Diagnostics. My name is Genie and I am here to help you answer any questions you may have about diagnosing and solving your problems with your app. Please describe the issue of your app.": "",
 	"Info": "",
 	"Integration Service Environments.homepage.name": "",
 	"Integration Service Environments.homepage.title": "",
+	"Issues": "",
 	"Keywords": "",
+	"Link": "",
+	"Loading": "",
+	"More Info": "",
+	"Next steps curated specifically for your app": "",
 	"Notifications": "",
+	"Observations": "",
+	"Okay give me a moment while I analyze your app for any issues related to this.": "",
 	"Others": "",
 	"Overview": "",
+	"Please choose rating icons or enter valid feedback message before you submit.": "",
 	"Popular troubleshooting tools": "",
 	"Privacy": "",
 	"Proactive Tools": "",
+	"Recommended Docs": "",
 	"Risk alerts": "",
 	"Service Fabric.homepage.description": "",
 	"Service Fabric.homepage.title": "",
+	"Sorry we are not able to find any result based on your questions. Can you rephrase your last message?": "",
 	"Static Azure Kubernetes Service.homepage.description": "",
 	"Static Azure Kubernetes Service.homepage.title": "",
 	"Success": "",
+	"Successful Checks": "",
 	"Support Tools": "",
+	"Tests that succeeded": "",
 	"Troubleshoot": "",
+	"Troubleshooting and Next Steps": "",
 	"Troubleshooting categories": "",
+	"Type your question": "",
 	"UTC End Time (mm/dd/yy)": "",
 	"UTC Start Time (mm/dd/yy)": "Počáteční čas UTC (mm / dd / rr)",
 	"Warning": "",
+	"We could not identify any futher troubleshooting steps or solutions": "",
+	"We could not identify any issues that caused availability drops to your app": "",
+	"We have run the following application insights analysis for you": "",
 	"Web App (Linux).homepage.description": "",
 	"Web App (Linux).homepage.title": "",
 	"Web App (Windows).category.AvailabilityAndPerformanceWindows.description": "",
