--- a/AngularApp/projects/app-service-diagnostics/src/assets/i18n/en.json
+++ b/AngularApp/projects/app-service-diagnostics/src/assets/i18n/en.json
@@ -2,8 +2,10 @@
 	"API Management.homepage.description": "Use App Service Environment Diagnostics to investigate how your App Service Environment is performing, diagnose issues, and discover how to improve the availability of your App Service Environment.  Select the problem category that best matches the information or tool that you are  interested in.",
 	"ASE.homepage.description": "Use App Service Environment Diagnostics to investigate how your App Service Environment is performing, diagnose issues, and discover how to improve the availability of your App Service Environment.  Select the problem category that best matches the information or tool that you are  interested in.",
 	"ASE.homepage.title": "App Service Environment Diagnostics",
+	"An interactive self-serve diagnostics tool": "An interactive self-serve diagnostics tool",
 	"App Service Certificates.homepage.description": "Use App Service Environment Diagnostics to investigate how your App Service Environment is performing, diagnose issues, and discover how to improve the availability of your App Service Environment.  Select the problem category that best matches the information or tool that you are  interested in.",
 	"App Service Certificates.homepage.title": "Use App Service Environment Diagnostics to investigate how your App Service Environment is performing, diagnose issues, and discover how to improve the availability of your App Service Environment.  Select the problem category that best matches the information or tool that you are  interested in.",
+	"App Service Diagnostics: Genie": "App Service Diagnostics: Genie",
 	"Apply": "Apply",
 	"Ask Genie": "Ask Genie",
 	"Availability": "Availability",
@@ -26,34 +28,59 @@
 	"Azure Spring Cloud.homepage.title": "Use App Service Environment Diagnostics to investigate how your App Service Environment is performing, diagnose issues, and discover how to improve the availability of your App Service Environment.  Select the problem category that best matches the information or tool that you are  interested in.",
 	"Cancel": "",
 	"Check your app’s health and discover app or platform issues.": "Check your app’s health and discover app or platform issues.",
+	"Checks": "Checks",
 	"Click here to go back to the old version.": "Click here to go back to the old version",
 	"Click here to view more details": "Click here to view more details",
+	"Collapse Genie": "Collapse Genie",
 	"Critical": "Critical",
+	"Description": "Description",
 	"Diagnostic Tools": "Diagnostic Tools",
+	"Documents to aid in troubleshooting": "Documents to aid in troubleshooting",
+	"Enable Application Insights": "Enable Application Insights",
+	"Events observed during this time period": "Events observed during this time period",
 	"Function App.homepage.description": "Investigate how your app is performing, diagnose issues and discover how to improve your application.",
 	"Function App.homepage.title": "Function App Diagnostics (Preview)",
+	"Go to Detector": "Go to Detector",
+	"Hello, Welcome to App Service Diagnostics. My name is Genie and I am here to help you answer any questions you may have about diagnosing and solving your problems with your app. Please describe the issue of your app.": "Hello, Welcome to App Service Diagnostics. My name is Genie and I am here to help you answer any questions you may have about diagnosing and solving your problems with your app. Please describe the issue of your app.",
 	"Info": "Info",
 	"Integration Service Environments.homepage.name": "Use App Service Environment Diagnostics to investigate how your App Service Environment is performing, diagnose issues, and discover how to improve the availability of your App Service Environment.  Select the problem category that best matches the information or tool that you are  interested in.",
 	"Integration Service Environments.homepage.title": "Use App Service Environment Diagnostics to investigate how your App Service Environment is performing, diagnose issues, and discover how to improve the availability of your App Service Environment.  Select the problem category that best matches the information or tool that you are  interested in.",
+	"Issues": "Issues",
 	"Keywords": "Keywords",
+	"Link": "Link",
+	"Loading": "Loading",
+	"More Info": "More Info",
+	"Next steps curated specifically for your app": "Next steps curated specifically for your app",
 	"Notifications": "Notifications",
+	"Observations": "Observations",
+	"Okay give me a moment while I analyze your app for any issues related to this.": "Okay give me a moment while I analyze your app for any issues related to this.",
 	"Others": "",
 	"Overview": "Overview",
+	"Please choose rating icons or enter valid feedback message before you submit.": "Please choose rating icons or enter valid feedback message before you submit.",
 	"Popular troubleshooting tools": "Popular troubleshooting tools",
 	"Privacy": "Privacy",
 	"Proactive Tools": "Proactive Tools",
+	"Recommended Docs": "Recommended Docs",
 	"Risk alerts": "",
 	"Service Fabric.homepage.description": "Use App Service Environment Diagnostics to investigate how your App Service Environment is performing, diagnose issues, and discover how to improve the availability of your App Service Environment.  Select the problem category that best matches the information or tool that you are  interested in.",
 	"Service Fabric.homepage.title": "Use App Service Environment Diagnostics to investigate how your App Service Environment is performing, diagnose issues, and discover how to improve the availability of your App Service Environment.  Select the problem category that best matches the information or tool that you are  interested in.",
+	"Sorry we are not able to find any result based on your questions. Can you rephrase your last message?": "Sorry we are not able to find any result based on your questions. Can you rephrase your last message?",
 	"Static Azure Kubernetes Service.homepage.description": "Explore ways to diagnose and troubleshoot the common problems of your cluster from CRUD operations to connection problems. Click on any of the documents below to start troubleshooting.",
 	"Static Azure Kubernetes Service.homepage.title": "Azure Kubernetes Service Diagnostics",
 	"Success": "Success",
+	"Successful Checks": "Successful Checks",
 	"Support Tools": "Support Tools",
+	"Tests that succeeded": "Tests that succeeded",
 	"Troubleshoot": "Troubleshoot",
+	"Troubleshooting and Next Steps": "Troubleshooting and Next Steps",
 	"Troubleshooting categories": "",
+	"Type your question": "Type your question",
 	"UTC End Time (mm/dd/yy)": "UTC End Time (mm/dd/yy)",
 	"UTC Start Time (mm/dd/yy)": "UTC Start Time (mm/dd/yy)",
 	"Warning": "Warning",
+	"We could not identify any futher troubleshooting steps or solutions": "We could not identify any futher troubleshooting steps or solutions",
+	"We could not identify any issues that caused availability drops to your app": "We could not identify any issues that caused availability drops to your app",
+	"We have run the following application insights analysis for you": "We have run the following application insights analysis for you",
 	"Web App (Linux).homepage.description": "Use App Service Environment Diagnostics to investigate how your App Service Environment is performing, diagnose issues, and discover how to improve the availability of your App Service Environment.  Select the problem category that best matches the information or tool that you are  interested in.",
 	"Web App (Linux).homepage.title": "Use App Service Environment Diagnostics to investigate how your App Service Environment is performing, diagnose issues, and discover how to improve the availability of your App Service Environment.  Select the problem category that best matches the information or tool that you are  interested in.",
 	"Web App (Windows).category.AvailabilityAndPerformanceWindows.description": "Check your app’s health and discover app or platform issues.",
