--- a/AngularApp/projects/app-service-diagnostics/src/assets/i18n/es.json
+++ b/AngularApp/projects/app-service-diagnostics/src/assets/i18n/es.json
@@ -2,8 +2,10 @@
 	"API Management.homepage.description": "Utilice App Service Environment Diagnostics para investigar el rendimiento de su App Service Environment, diagnosticar problemas y descubrir cómo mejorar la disponibilidad de su App Service Environment.",
 	"ASE.homepage.description": "Utilice App Service Environment Diagnostics para investigar el rendimiento de su App Service Environment, diagnosticar problemas y descubrir cómo mejorar la disponibilidad de su App Service Environment.",
 	"ASE.homepage.title": "Diagnóstico del entorno del servicio de aplicaciones",
+	"An interactive self-serve diagnostics tool": "",
 	"App Service Certificates.homepage.description": "Utilice App Service Environment Diagnostics para investigar el rendimiento de su App Service Environment, diagnosticar problemas y descubrir cómo mejorar la disponibilidad de su App Service Environment.",
 	"App Service Certificates.homepage.title": "Utilice App Service Environment Diagnostics para investigar el rendimiento de su App Service Environment, diagnosticar problemas y descubrir cómo mejorar la disponibilidad de su App Service Environment.",
+	"App Service Diagnostics: Genie": "",
 	"Apply": "",
 	"Ask Genie": "",
 	"Availability": "",
@@ -26,34 +28,59 @@
 	"Azure Spring Cloud.homepage.title": "Utilice App Service Environment Diagnostics para investigar el rendimiento de su App Service Environment, diagnosticar problemas y descubrir cómo mejorar la disponibilidad de su App Service Environment.",
 	"Cancel": "",
 	"Check your app’s health and discover app or platform issues.": "Verifique el estado de su aplicación y descubra problemas con la plataforma o la aplicación.",
+	"Checks": "",
 	"Click here to go back to the old version.": "",
 	"Click here to view more details": "",
+	"Collapse Genie": "",
 	"Critical": "",
+	"Description": "",
 	"Diagnostic Tools": "",
+	"Documents to aid in troubleshooting": "",
+	"Enable Application Insights": "",
+	"Events observed during this time period": "",
 	"Function App.homepage.description": "Investigue el rendimiento de su aplicación, diagnostique problemas y descubra cómo mejorarla.",
 	"Function App.homepage.title": "Función de diagnóstico de la aplicación (versión preliminar)",
+	"Go to Detector": "",
+	"Hello, Welcome to App Service Diagnostics. My name is Genie and I am here to help you answer any questions you may have about diagnosing and solving your problems with your app. Please describe the issue of your app.": "",
 	"Info": "",
 	"Integration Service Environments.homepage.name": "Utilice App Service Environment Diagnostics para investigar el rendimiento de su App Service Environment, diagnosticar problemas y descubrir cómo mejorar la disponibilidad de su App Service Environment.",
 	"Integration Service Environments.homepage.title": "Utilice App Service Environment Diagnostics para investigar el rendimiento de su App Service Environment, diagnosticar problemas y descubrir cómo mejorar la disponibilidad de su App Service Environment.",
+	"Issues": "",
 	"Keywords": "Palabras clave",
+	"Link": "",
+	"Loading": "",
+	"More Info": "",
+	"Next steps curated specifically for your app": "",
 	"Notifications": "",
+	"Observations": "",
+	"Okay give me a moment while I analyze your app for any issues related to this.": "",
 	"Others": "",
 	"Overview": "Visión general",
+	"Please choose rating icons or enter valid feedback message before you submit.": "",
 	"Popular troubleshooting tools": "Herramientas de resolución de problemas populares",
 	"Privacy": "intimidad",
 	"Proactive Tools": "",
+	"Recommended Docs": "",
 	"Risk alerts": "Espanish categories",
 	"Service Fabric.homepage.description": "Utilice App Service Environment Diagnostics para investigar el rendimiento de su App Service Environment, diagnosticar problemas y descubrir cómo mejorar la disponibilidad de su App Service Environment.",
 	"Service Fabric.homepage.title": "Utilice App Service Environment Diagnostics para investigar el rendimiento de su App Service Environment, diagnosticar problemas y descubrir cómo mejorar la disponibilidad de su App Service Environment.",
+	"Sorry we are not able to find any result based on your questions. Can you rephrase your last message?": "",
 	"Static Azure Kubernetes Service.homepage.description": "Explore formas de diagnosticar y solucionar los problemas comunes de su clúster, desde operaciones CRUD hasta problemas de conexión. Haga clic en cualquiera de los documentos a continuación para comenzar a solucionar problemas.",
 	"Static Azure Kubernetes Service.homepage.title": "Diagnóstico del servicio de Azure Kubernetes",
 	"Success": "",
+	"Successful Checks": "",
 	"Support Tools": "",
+	"Tests that succeeded": "",
 	"Troubleshoot": "Solucionar problemas",
+	"Troubleshooting and Next Steps": "",
 	"Troubleshooting categories": "Espanish",
+	"Type your question": "",
 	"UTC End Time (mm/dd/yy)": "Hora de finalización UTC (mm / dd / aa)",
 	"UTC Start Time (mm/dd/yy)": "Hora de inicio UTC (mm / dd / aa)",
 	"Warning": "",
+	"We could not identify any futher troubleshooting steps or solutions": "",
+	"We could not identify any issues that caused availability drops to your app": "",
+	"We have run the following application insights analysis for you": "",
 	"Web App (Linux).homepage.description": "Utilice App Service Environment Diagnostics para investigar el rendimiento de su App Service Environment, diagnosticar problemas y descubrir cómo mejorar la disponibilidad de su App Service Environment.",
 	"Web App (Linux).homepage.title": "Utilice App Service Environment Diagnostics para investigar el rendimiento de su App Service Environment, diagnosticar problemas y descubrir cómo mejorar la disponibilidad de su App Service Environment.",
 	"Web App (Windows).category.AvailabilityAndPerformanceWindows.description": "Verifique el estado de su aplicación y descubra problemas con la plataforma o la aplicación.",
