--- a/AngularApp/projects/app-service-diagnostics/src/assets/i18n/ja.json
+++ b/AngularApp/projects/app-service-diagnostics/src/assets/i18n/ja.json
@@ -2,8 +2,10 @@
 	"API Management.homepage.description": "App Service環境診断を使用して、App Service環境のパフォーマンスを調査し、問題を診断し、AppService環境の可用性を向上させる方法を見つけます。",
 	"ASE.homepage.description": "App Service環境診断を使用して、App Service環境のパフォーマンスを調査し、問題を診断し、AppService環境の可用性を向上させる方法を見つけます。",
 	"ASE.homepage.title": "App Service Environmentの診断",
+	"An interactive self-serve diagnostics tool": "",
 	"App Service Certificates.homepage.description": "App Service環境診断を使用して、App Service環境のパフォーマンスを調査し、問題を診断し、AppService環境の可用性を向上させる方法を見つけます。",
 	"App Service Certificates.homepage.title": "App Service環境診断を使用して、App Service環境のパフォーマンスを調査し、問題を診断し、AppService環境の可用性を向上させる方法を見つけます。",
+	"App Service Diagnostics: Genie": "",
 	"Apply": "",
 	"Ask Genie": "",
 	"Availability": "",
@@ -26,34 +28,59 @@
 	"Azure Spring Cloud.homepage.title": "App Service環境診断を使用して、App Service環境のパフォーマンスを調査し、問題を診断し、AppService環境の可用性を向上させる方法を見つけます。",
 	"Cancel": "",
 	"Check your app’s health and discover app or platform issues.": "アプリの状態を確認し、アプリまたはプラットフォームの問題を発見します。",
+	"Checks": "",
 	"Click here to go back to the old version.": "",
 	"Click here to view more details": "",
+	"Collapse Genie": "",
 	"Critical": "",
+	"Description": "",
 	"Diagnostic Tools": "",
+	"Documents to aid in troubleshooting": "",
+	"Enable Application Insights": "",
+	"Events observed during this time period": "",
 	"Function App.homepage.description": "アプリのパフォーマンスを調査し、問題を診断して、アプリケーションを改善する方法を見つけます。",
 	"Function App.homepage.title": "機能アプリの診断（プレビュー）",
+	"Go to Detector": "",
+	"Hello, Welcome to App Service Diagnostics. My name is Genie and I am here to help you answer any questions you may have about diagnosing and solving your problems with your app. Please describe the issue of your app.": "",
 	"Info": "",
 	"Integration Service Environments.homepage.name": "App Service環境診断を使用して、App Service環境のパフォーマンスを調査し、問題を診断し、AppService環境の可用性を向上させる方法を見つけます。",
 	"Integration Service Environments.homepage.title": "App Service環境診断を使用して、App Service環境のパフォーマンスを調査し、問題を診断し、AppService環境の可用性を向上させる方法を見つけます。",
+	"Issues": "",
 	"Keywords": "キーワード",
+	"Link": "",
+	"Loading": "",
+	"More Info": "",
+	"Next steps curated specifically for your app": "",
 	"Notifications": "",
+	"Observations": "",
+	"Okay give me a moment while I analyze your app for any issues related to this.": "",
 	"Others": "",
 	"Overview": "概要",
+	"Please choose rating icons or enter valid feedback message before you submit.": "",
 	"Popular troubleshooting tools": "人気のトラブルシューティングツール",
 	"Privacy": "プライバシー",
 	"Proactive Tools": "",
+	"Recommended Docs": "",
 	"Risk alerts": "Espanish categories",
 	"Service Fabric.homepage.description": "App Service環境診断を使用して、App Service環境のパフォーマンスを調査し、問題を診断し、AppService環境の可用性を向上させる方法を見つけます。",
 	"Service Fabric.homepage.title": "App Service環境診断を使用して、App Service環境のパフォーマンスを調査し、問題を診断し、AppService環境の可用性を向上させる方法を見つけます。",
+	"Sorry we are not able to find any result based on your questions. Can you rephrase your last message?": "",
 	"Static Azure Kubernetes Service.homepage.description": "CRUD操作から接続の問題まで、クラスターの一般的な問題を診断およびトラブルシューティングする方法を探ります。以下のドキュメントのいずれかをクリックして、トラブルシューティングを開始してください。",
 	"Static Azure Kubernetes Service.homepage.title": "AzureKubernetesサービス診断",
 	"Success": "",
+	"Successful Checks": "",
 	"Support Tools": "",
+	"Tests that succeeded": "",
 	"Troubleshoot": "トラブルシューティング",
+	"Troubleshooting and Next Steps": "",
 	"Troubleshooting categories": "Espanish categories",
+	"Type your question": "",
 	"UTC End Time (mm/dd/yy)": "UTC終了時間（mm / dd / yy）",
 	"UTC Start Time (mm/dd/yy)": "UTC開始時間（mm / dd / yy）",
 	"Warning": "",
+	"We could not identify any futher troubleshooting steps or solutions": "",
+	"We could not identify any issues that caused availability drops to your app": "",
+	"We have run the following application insights analysis for you": "",
 	"Web App (Linux).homepage.description": "App Service環境診断を使用して、App Service環境のパフォーマンスを調査し、問題を診断し、AppService環境の可用性を向上させる方法を見つけます。",
 	"Web App (Linux).homepage.title": "App Service環境診断を使用して、App Service環境のパフォーマンスを調査し、問題を診断し、AppService環境の可用性を向上させる方法を見つけます。",
 	"Web App (Windows).category.AvailabilityAndPerformanceWindows.description": "アプリの状態を確認し、アプリまたはプラットフォームの問題を発見します。",
