--- a/AngularApp/projects/app-service-diagnostics/src/assets/i18n/zh.json
+++ b/AngularApp/projects/app-service-diagnostics/src/assets/i18n/zh.json
@@ -2,8 +2,10 @@
 	"API Management.homepage.description": "使用App Service环境诊断程序可以调查您的App Service环境如何执行，诊断问题以及发现如何提高App Service环境的可用性。选择以下您感兴趣的问题类别进行了解。",
 	"ASE.homepage.description": "使用App Service环境诊断程序可以调查您的App Service环境如何执行，诊断问题以及发现如何提高App Service环境的可用性。选择以下您感兴趣的问题类别进行了解。",
 	"ASE.homepage.title": "App Service Environment诊断",
+	"An interactive self-serve diagnostics tool": "诊断并解决问题的智能小助手",
 	"App Service Certificates.homepage.description": "使用App Service环境诊断程序可以调查您的App Service环境如何执行，诊断问题以及发现如何提高App Service环境的可用性。选择以下您感兴趣的问题类别进行了解。",
 	"App Service Certificates.homepage.title": "使用App Service环境诊断程序可以调查您的App Service环境如何执行，诊断问题以及发现如何提高App Service环境的可用性。选择以下您感兴趣的问题类别进行了解。",
+	"App Service Diagnostics: Genie": "Genie 智能小助手",
 	"Apply": "",
 	"Ask Genie": "",
 	"Availability": "可用性",
@@ -26,34 +28,59 @@
 	"Azure Spring Cloud.homepage.title": "使用App Service环境诊断程序可以调查您的App Service环境如何执行，诊断问题以及发现如何提高App Service环境的可用性。选择以下您感兴趣的问题类别进行了解。",
 	"Cancel": "",
 	"Check your app’s health and discover app or platform issues.": "检查您应用的运行状况，并发现应用或平台问题。",
+	"Checks": "检查",
 	"Click here to go back to the old version.": "单击此处返回到旧版本",
 	"Click here to view more details": "点击此处查看更多详细信息",
+	"Collapse Genie": "关闭窗口",
 	"Critical": "关键",
+	"Description": "描述",
 	"Diagnostic Tools": "诊断工具",
+	"Documents to aid in troubleshooting": "帮助排除故障的文档",
+	"Enable Application Insights": "使用Application Insights",
+	"Events observed during this time period": "观察到的事件",
 	"Function App.homepage.description": "调查您的应用程序的性能如何，诊断问题并发现如何改进您的应用程序。",
 	"Function App.homepage.title": "功能应用程序诊断（预览）",
+	"Go to Detector": "",
+	"Hello, Welcome to App Service Diagnostics. My name is Genie and I am here to help you answer any questions you may have about diagnosing and solving your problems with your app. Please describe the issue of your app.": "您好，欢迎使用应用服务诊断。我的名字是 Genie，我在这里可以帮助您回答有关诊断和解决应用问题的任何问题。请描述您的应用的问题。",
 	"Info": "通知",
 	"Integration Service Environments.homepage.name": "使用App Service环境诊断程序可以调查您的App Service环境如何执行，诊断问题以及发现如何提高App Service环境的可用性。选择以下您感兴趣的问题类别进行了解。",
 	"Integration Service Environments.homepage.title": "使用App Service环境诊断程序可以调查您的App Service环境如何执行，诊断问题以及发现如何提高App Service环境的可用性。选择以下您感兴趣的问题类别进行了解。",
+	"Issues": "问题",
 	"Keywords": "关键词",
+	"Link": "链接",
+	"Loading": "加载中",
+	"More Info": "了解更多",
+	"Next steps curated specifically for your app": "专门为您的应用策划的后续步骤",
 	"Notifications": "",
+	"Observations": "观察",
+	"Okay give me a moment while I analyze your app for any issues related to this.": "好的，我们正在分析您的应用程序是否存在与此相关的任何问题。",
 	"Others": "",
 	"Overview": "概述",
+	"Please choose rating icons or enter valid feedback message before you submit.": "\n请在提交前点击评分图标或输入有效的反馈信息。",
 	"Popular troubleshooting tools": "常用的故障排除工具",
 	"Privacy": "隐私",
 	"Proactive Tools": "主动监测工具",
+	"Recommended Docs": "推荐文档",
 	"Risk alerts": "Espanish categories",
 	"Service Fabric.homepage.description": "使用App Service环境诊断程序可以调查您的App Service环境如何执行，诊断问题以及发现如何提高App Service环境的可用性。选择以下您感兴趣的问题类别进行了解。",
 	"Service Fabric.homepage.title": "使用App Service环境诊断程序可以调查您的App Service环境如何执行，诊断问题以及发现如何提高App Service环境的可用性。选择以下您感兴趣的问题类别进行了解。",
+	"Sorry we are not able to find any result based on your questions. Can you rephrase your last message?": "抱歉，我们无法根据您的问题找到任何结果。您能否再描述一下您的问题？",
 	"Static Azure Kubernetes Service.homepage.description": "探索诊断和排除群集的常见问题（从CRUD操作到连接问题）的方法。单击下面的任何文档以开始故障排除。",
 	"Static Azure Kubernetes Service.homepage.title": "Azure Kubernetes服务诊断",
 	"Success": "成功",
+	"Successful Checks": "成功的检查",
 	"Support Tools": "支持工具",
+	"Tests that succeeded": "以下检查成功通过",
 	"Troubleshoot": "疑难解答",
+	"Troubleshooting and Next Steps": "故障排除和后续步骤",
 	"Troubleshooting categories": "Espanish categories",
+	"Type your question": "输入您的问题",
 	"UTC End Time (mm/dd/yy)": "UTC结束时间（mm / dd / yy）",
 	"UTC Start Time (mm/dd/yy)": "UTC开始时间（mm / dd / yy）",
 	"Warning": "警告",
+	"We could not identify any futher troubleshooting steps or solutions": "我们无法确定任何进一步的故障排除步骤或解决方案",
+	"We could not identify any issues that caused availability drops to your app": "我们无法确定导致您的应用可用性下降的任何问题",
+	"We have run the following application insights analysis for you": "我们帮您运行了以下的Application Insights 数据分析",
 	"Web App (Linux).homepage.description": "使用App Service环境诊断程序可以调查您的App Service环境如何执行，诊断问题以及发现如何提高App Service环境的可用性。选择以下您感兴趣的问题类别进行了解。",
 	"Web App (Linux).homepage.title": "使用App Service环境诊断程序可以调查您的App Service环境如何执行，诊断问题以及发现如何提高App Service环境的可用性。选择以下您感兴趣的问题类别进行了解。",
 	"Web App (Windows).category.AvailabilityAndPerformanceWindows.description": "检查您应用的运行状况，并发现应用或平台问题。",
