--- a/AngularApp/projects/app-service-diagnostics/src/assets/i18n/de.json
+++ b/AngularApp/projects/app-service-diagnostics/src/assets/i18n/de.json
@@ -2,8 +2,10 @@
 	"API Management.homepage.description": "Verwenden Sie die App Service-Umgebungsdiagnose, um die Leistung Ihrer App Service-Umgebung zu untersuchen, Probleme zu diagnostizieren und herauszufinden, wie Sie die Verfügbarkeit Ihrer App Service-Umgebung verbessern können.",
 	"ASE.homepage.description": "Verwenden Sie die App Service-Umgebungsdiagnose, um die Leistung Ihrer App Service-Umgebung zu untersuchen, Probleme zu diagnostizieren und herauszufinden, wie Sie die Verfügbarkeit Ihrer App Service-Umgebung verbessern können.",
 	"ASE.homepage.title": "App Service-Umgebungsdiagnose",
+	"An interactive self-serve diagnostics tool": "",
 	"App Service Certificates.homepage.description": "Verwenden Sie die App Service-Umgebungsdiagnose, um die Leistung Ihrer App Service-Umgebung zu untersuchen, Probleme zu diagnostizieren und herauszufinden, wie Sie die Verfügbarkeit Ihrer App Service-Umgebung verbessern können.",
 	"App Service Certificates.homepage.title": "Verwenden Sie die App Service-Umgebungsdiagnose, um die Leistung Ihrer App Service-Umgebung zu untersuchen, Probleme zu diagnostizieren und herauszufinden, wie Sie die Verfügbarkeit Ihrer App Service-Umgebung verbessern können.",
+	"App Service Diagnostics: Genie": "",
 	"Apply": "",
 	"Ask Genie": "",
 	"Availability": "",
@@ -26,34 +28,59 @@
 	"Azure Spring Cloud.homepage.title": "Verwenden Sie die App Service-Umgebungsdiagnose, um die Leistung Ihrer App Service-Umgebung zu untersuchen, Probleme zu diagnostizieren und herauszufinden, wie Sie die Verfügbarkeit Ihrer App Service-Umgebung verbessern können.",
 	"Cancel": "",
 	"Check your app’s health and discover app or platform issues.": "Überprüfen Sie den Zustand Ihrer App und entdecken Sie Probleme mit Apps oder Plattformen.",
+	"Checks": "",
 	"Click here to go back to the old version.": "",
 	"Click here to view more details": "",
+	"Collapse Genie": "",
 	"Critical": "",
+	"Description": "",
 	"Diagnostic Tools": "",
+	"Documents to aid in troubleshooting": "",
+	"Enable Application Insights": "",
+	"Events observed during this time period": "",
 	"Function App.homepage.description": "Untersuchen Sie die Leistung Ihrer App, diagnostizieren Sie Probleme und finden Sie heraus, wie Sie Ihre Anwendung verbessern können.",
 	"Function App.homepage.title": "Funktions-App-Diagnose (Vorschau)",
+	"Go to Detector": "",
+	"Hello, Welcome to App Service Diagnostics. My name is Genie and I am here to help you answer any questions you may have about diagnosing and solving your problems with your app. Please describe the issue of your app.": "",
 	"Info": "",
 	"Integration Service Environments.homepage.name": "Verwenden Sie die App Service-Umgebungsdiagnose, um die Leistung Ihrer App Service-Umgebung zu untersuchen, Probleme zu diagnostizieren und herauszufinden, wie Sie die Verfügbarkeit Ihrer App Service-Umgebung verbessern können.",
 	"Integration Service Environments.homepage.title": "Verwenden Sie die App Service-Umgebungsdiagnose, um die Leistung Ihrer App Service-Umgebung zu untersuchen, Probleme zu diagnostizieren und herauszufinden, wie Sie die Verfügbarkeit Ihrer App Service-Umgebung verbessern können.",
+	"Issues": "",
 	"Keywords": "Schlüsselwörter",
+	"Link": "",
+	"Loading": "",
+	"More Info": "",
+	"Next steps curated specifically for your app": "",
 	"Notifications": "",
+	"Observations": "",
+	"Okay give me a moment while I analyze your app for any issues related to this.": "",
 	"Others": "",
 	"Overview": "Überblick",
+	"Please choose rating icons or enter valid feedback message before you submit.": "",
 	"Popular troubleshooting tools": "Beliebte Tools zur Fehlerbehebung",
 	"Privacy": "Privatsphäre",
 	"Proactive Tools": "",
+	"Recommended Docs": "",
 	"Risk alerts": "",
 	"Service Fabric.homepage.description": "Verwenden Sie die App Service-Umgebungsdiagnose, um die Leistung Ihrer App Service-Umgebung zu untersuchen, Probleme zu diagnostizieren und herauszufinden, wie Sie die Verfügbarkeit Ihrer App Service-Umgebung verbessern können.",
 	"Service Fabric.homepage.title": "Verwenden Sie die App Service-Umgebungsdiagnose, um die Leistung Ihrer App Service-Umgebung zu untersuchen, Probleme zu diagnostizieren und herauszufinden, wie Sie die Verfügbarkeit Ihrer App Service-Umgebung verbessern können.",
+	"Sorry we are not able to find any result based on your questions. Can you rephrase your last message?": "",
 	"Static Azure Kubernetes Service.homepage.description": "Erforschen Sie Möglichkeiten zur Diagnose und Behebung der häufigsten Probleme Ihres Clusters, von CRUD-Vorgängen bis hin zu Verbindungsproblemen. Klicken Sie auf eines der folgenden Dokumente, um die Fehlerbehebung zu starten.",
 	"Static Azure Kubernetes Service.homepage.title": "Azure Kubernetes-Dienstdiagnose",
 	"Success": "",
+	"Successful Checks": "",
 	"Support Tools": "",
+	"Tests that succeeded": "",
 	"Troubleshoot": "Problembehandlung",
+	"Troubleshooting and Next Steps": "",
 	"Troubleshooting categories": "",
+	"Type your question": "",
 	"UTC End Time (mm/dd/yy)": "UTC-Endzeit (MM / TT / JJ)",
 	"UTC Start Time (mm/dd/yy)": "UTC-Startzeit (MM / TT / JJ)",
 	"Warning": "",
+	"We could not identify any futher troubleshooting steps or solutions": "",
+	"We could not identify any issues that caused availability drops to your app": "",
+	"We have run the following application insights analysis for you": "",
 	"Web App (Linux).homepage.description": "Verwenden Sie die App Service-Umgebungsdiagnose, um die Leistung Ihrer App Service-Umgebung zu untersuchen, Probleme zu diagnostizieren und herauszufinden, wie Sie die Verfügbarkeit Ihrer App Service-Umgebung verbessern können.",
 	"Web App (Linux).homepage.title": "Verwenden Sie die App Service-Umgebungsdiagnose, um die Leistung Ihrer App Service-Umgebung zu untersuchen, Probleme zu diagnostizieren und herauszufinden, wie Sie die Verfügbarkeit Ihrer App Service-Umgebung verbessern können.",
 	"Web App (Windows).category.AvailabilityAndPerformanceWindows.description": "Überprüfen Sie den Zustand Ihrer App und entdecken Sie Probleme mit Apps oder Plattformen.",
